--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <nav class="navbar navbar-expand-lg">
                             <a class="navbar-brand" href="index.html">
 <!-- <img src="assets/images/logo.png" alt="Logo"> -->
-<img src="assets/images/AcctAbility.png" width="40" alt="Logo">
+<img src="assets/images/AcctAbility.png" width="150" alt="Logo">
 </a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 <span class="toggler-icon"></span>
@@ -86,21 +86,21 @@
                                 </ul>
                             </div>
                             <div class="navbar-btn d-none d-sm-inline-block">
-                                <a class="main-btn" href="#contact">Contact Us</a>
+                                <a class="main-btn" href="#contact" style="background-color: aliceblue;">Contact Us</a>
                             </div>
                         </nav>
                     </div>
                 </div>
             </div>
         </div>
-        <div id="home" class="header-hero bg_cover d-lg-flex align-items-center" style="background-image: url(assets/images/header-hero.jpg)">
+        <div id="home" class="header-hero bg_cover d-lg-flex align-items-center">
             <div class="container">
                 <div class="row">
                     <div class="col-lg-7">
                         <div class="header-hero-content">
                             <h1 class="hero-title wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s"><b>Your</b> <span>Accounting</span> and Compliance partner for <b>Growth.</b></h1>
-                            <p class="text wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s">At AcctAbility, we are committed to providing you with specialized and seamless accounting solutions, that empower you to concentrate on your core strengths. With our specialized data analyses services, we can together unlock the full potential of your financial data and drive your business forward.</p>
-                            <br><button class="main-btn">Contact Us</button>
+                            <p class="text wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s" style="color: aliceblue;">At AcctAbility, we are committed to providing you with specialized and seamless accounting solutions, that empower you to concentrate on your core strengths. With our specialized data analyses services, we can together unlock the full potential of your financial data and drive your business forward.</p>
+                            <br><button class="main-btn" style="background-color: aliceblue;">Contact Us</button>
                             <!-- <div class="header-singup wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.8s">
                                 <input type="text" placeholder="username@yourdomain.com">
                                 
@@ -172,8 +172,8 @@
                                             <span class="shape-2"></span>
                                         </div>
                                         <div class="counter-content media-body">
-                                            <span class="counter-count"><span class="counter">870</span></span>
-                                            <p class="text">Projects</p>
+                                            <span class="counter-count"><span class="counter">100</span>+</span>
+                                            <p class="text">Employees</p>
                                         </div>
                                     </div>
                                 </div>
@@ -284,6 +284,7 @@
                                     </div>
                                 </div>
                             </div>
+                            
                         </div>
                     </div>
                 </div>
