--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                         <nav class="navbar navbar-expand-lg">
                             <a class="navbar-brand" href="index.html">
 <!-- <img src="assets/images/logo.png" alt="Logo"> -->
-<img src="assets/images/AcctAbility.png" width="150" alt="Logo">
+<img class= "logo-hero" src="assets/images/AcctAbility.png" width="150rem" height="100%" alt="Logo">
 </a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 <span class="toggler-icon"></span>
