--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="assets/css/slick.css">
 
     <link rel="stylesheet" href="assets/css/font-awesome.min.css">
+    <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
 
     <link rel="stylesheet" href="assets/css/LineIcons.css">
 
@@ -357,7 +358,8 @@
                         <div class="section-title wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s">
                             <h6 class="sub-title">We are certified Experts in</h6>
                         </div>
-                        <div class="single-brand mt-50 text-md-left wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
+                        <div class=" d-flex justify-content-md-center align-items-center">
+                            <div class="single-brand mt-50 text-md-left wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
                             <img src="assets/images/busy.png" alt="brand">
                         </div>
                         <div class="single-brand mt-50 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.3s">
@@ -369,7 +371,7 @@
                         <div class="single-brand mt-50 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
                             <img src="assets/images/xero.png" alt="brand">
                         </div>
-                        
+                    </div>
                     </div>
                 </div>
             </div>
@@ -757,8 +759,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <div class="brand-wrapper pt-50 clearfix">
-                        <div class="single-brand mt-50 text-md-left wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
+                    <div class="brand-wrapper d-lg-flex justify-content-md-center  align-items-center pt-50 clearfix">
+                        <div class="single-brand mr-3 mt-50 text-md-left wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
                             <img src="assets/images/Silicon.PNG" alt="brand">
                         </div>
                         <div class="single-brand mt-50 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.3s">
