--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="assets/css/slick.css">
 
     <link rel="stylesheet" href="assets/css/font-awesome.min.css">
-    <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" />
+    <!-- <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" /> -->
 
     <link rel="stylesheet" href="assets/css/LineIcons.css">
 
@@ -57,7 +57,7 @@
                         <nav class="navbar navbar-expand-lg">
                             <a class="navbar-brand" href="index.html">
 <!-- <img src="assets/images/logo.png" alt="Logo"> -->
-<img class= "logo-hero" src="assets/images/AcctAbility_transparent.png" width="150rem" height="100%" alt="Logo">
+<img class= "logo-hero" src="assets/images/AcctAbility_transparent.png" width="135rem" height="100%" alt="Logo">
 </a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 <span class="toggler-icon"></span>
@@ -360,7 +360,7 @@
                         </div>
                         <div class=" d-flex justify-content-md-center align-items-center">
                             <div class="single-brand mt-50 text-md-left wow fadeIn" data-wow-duration="1s" data-wow-delay="0.2s">
-                            <img src="assets/images/busy.png" alt="brand">
+                            <img src="assets/images/busy1.png" alt="brand">
                         </div>
                         <div class="single-brand mt-50 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.3s">
                             <img src="assets/images/tallyprime-logo.png" alt="brand">
@@ -369,7 +369,7 @@
                             <img src="assets/images/Intuit_QuickBooks_logo.png" alt="brand">
                         </div>
                         <div class="single-brand mt-50 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s">
-                            <img src="assets/images/xero.png" alt="brand">
+                            <img src="assets/images/xero1.png" alt="brand">
                         </div>
                     </div>
                     </div>
@@ -659,8 +659,9 @@
                             <li></li>
                             <li></li>
                         </ul>
-                        <p class="text">Duis et metus et massa tempus lacinia. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Maecenas ultricies, orci molestie blandit interdum. <br> <br> ipsum ante pellentesque nisl, eget
-                            mollis turpis quam nec eros. ultricies, orci molestie blandit interdum.</p>
+                        <p class="text">At AcctAbility, our commitment to excellence goes beyond the services we provide it's reflected in the experiences and successes of our clients. We take pride in building strong, collaborative partnerships that drive tangible results. Don't just take our word for it; hear what our clients have to say about their journey with AcctAbility Services.
+
+                            <br> <br>These testimonials highlight the impact of our dedicated team, innovative solutions, and unwavering commitment to client success. Discover why businesses trust AcctAbility Services for exceptional service and transformative outcomes.</p>
                     </div>
                 </div>
                 <div class="col-lg-6">
