changes in testimonial

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
 
     <link rel="stylesheet" href="assets/css/font-awesome.min.css">
     <!-- <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" /> -->
-
     <link rel="stylesheet" href="assets/css/LineIcons.css">
 
     <link rel="stylesheet" href="assets/css/animate.css">
@@ -672,7 +671,9 @@
                         <div class="testimonial-content-wrapper testimonial-active">
                             <div class="single-testimonial">
                                 <div class="testimonial-text">
-                                    <p class="text">“Praesent scelerisque, odio eu fermentum malesuada, nisi arcu volutpat nisl, sit amet convallis nunc turp.”</p>
+                                    <p class="text">“Working with AcctAbility has been a game-changer for our business. Their team's dedication to excellence and innovative solutions have significantly boosted our productivity.”
+
+                                        </p>
                                 </div>
                                 <div class="testimonial-author d-sm-flex justify-content-between">
                                     <div class="author-info d-flex align-items-center">
@@ -698,7 +699,7 @@
                             </div>
                             <div class="single-testimonial">
                                 <div class="testimonial-text">
-                                    <p class="text">“Praesent scelerisque, odio eu fermentum malesuada, nisi arcu volutpat nisl, sit amet convallis nunc turp.”</p>
+                                    <p class="text">“I can't say enough about the outstanding service we've received from AcctAbility. The team goes above and beyond to understand our needs and tailor solutions accordingly. ”</p>
                                 </div>
                                 <div class="testimonial-author d-sm-flex justify-content-between">
                                     <div class="author-info d-flex align-items-center">
@@ -724,7 +725,7 @@
                             </div>
                             <div class="single-testimonial">
                                 <div class="testimonial-text">
-                                    <p class="text">“Praesent scelerisque, odio eu fermentum malesuada, nisi arcu volutpat nisl, sit amet convallis nunc turp.”</p>
+                                    <p class="text">“Choosing AcctAbility was one of the best decisions we made. The team is not just professional but genuinely cares about delivering results. Their attention to detail and commitment to our success set them apart.”</p>
                                 </div>
                                 <div class="testimonial-author d-sm-flex justify-content-between">
                                     <div class="author-info d-flex align-items-center">
@@ -986,7 +987,7 @@
                                 <p class="text" style="color: white;">+91 9111900007</p>
                                 <ul class="social mt-40">
                                     <li><a href="#"><i class="lni-facebook"></i></a></li>
-                                    <li><a href="#"><i class="lni-twitter"></i></a></li>
+                                    <li><a href="#"><i class="lni lni-twitter-original"></i></a></li>
                                     <li><a href="#"><i class="lni-instagram"></i></a></li>
                                     <li><a href="#"><i class="lni-linkedin"></i></a></li>
                                 </ul>
