removed blog and feedback

--- a/index.html
+++ b/index.html
@@ -77,9 +77,9 @@
                                     <!-- <li class="nav-item">
                                         <a href="index.html/#portfolio">Portfolio</a>
                                     </li> -->
-                                    <li class="nav-item">
+                                    <!-- <li class="nav-item">
                                         <a href="index.html/#blog">Blog</a>
-                                    </li>
+                                    </li> -->
                                     <li class="nav-item">
                                         <a href="index.html/#contact">Contact</a>
                                     </li>
@@ -685,7 +685,7 @@
                                             <span class="sub-title">CEO, Silicon</span>
                                         </div>
                                     </div>
-                                    <div class="author-review">
+                                    <!-- <div class="author-review">
                                         <ul class="star">
                                             <li><i class="lni-star"></i></li>
                                             <li><i class="lni-star"></i></li>
@@ -694,7 +694,7 @@
                                             <li><i class="lni-star"></i></li>
                                         </ul>
                                         <span class="review">( 7 Reviews )</span>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                             <div class="single-testimonial">
@@ -711,7 +711,7 @@
                                             <span class="sub-title">Okaya</span>
                                         </div>
                                     </div>
-                                    <div class="author-review">
+                                    <!-- <div class="author-review">
                                         <ul class="star">
                                             <li><i class="lni-star"></i></li>
                                             <li><i class="lni-star"></i></li>
@@ -720,7 +720,7 @@
                                             <li><i class="lni-star"></i></li>
                                         </ul>
                                         <span class="review">( 7 Reviews )</span>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                             <div class="single-testimonial">
@@ -737,7 +737,7 @@
                                             <span class="sub-title">Pulp</span>
                                         </div>
                                     </div>
-                                    <div class="author-review">
+                                    <!-- <div class="author-review">
                                         <ul class="star">
                                             <li><i class="lni-star"></i></li>
                                             <li><i class="lni-star"></i></li>
@@ -746,7 +746,7 @@
                                             <li><i class="lni-star"></i></li>
                                         </ul>
                                         <span class="review">( 7 Reviews )</span>
-                                    </div>
+                                    </div> -->
                                 </div>
                             </div>
                         </div>
@@ -779,7 +779,7 @@
     </div>
 
 
-    <section id="blog" class="blog-area pt-115">
+    <!-- <section id="blog" class="blog-area pt-115">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-4">
@@ -849,7 +849,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
 
     <section id="contact" class="contact-area pt-120 pb-120">
