font-awesom icon added

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="shortcut icon" href="assets/images/favicon-16x16.png" type="image/png">
 
     <link rel="stylesheet" href="assets/css/slick.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
     <link rel="stylesheet" href="assets/css/font-awesome.min.css">
     <!-- <link href="https://cdn.lineicons.com/4.0/lineicons.css" rel="stylesheet" /> -->
@@ -56,7 +57,7 @@
                         <nav class="navbar navbar-expand-lg">
                             <a class="navbar-brand" href="index.html">
 <!-- <img src="assets/images/logo.png" alt="Logo"> -->
-<img class= "logo-hero" src="assets/images/AcctAbility_transparent.png" width="200px" height="100%" alt="Logo">
+<img class= "logo-hero" src="assets/images/AcctAbility_transparent.png" width="135rem" height="100%" alt="Logo">
 </a>
                             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 <span class="toggler-icon"></span>
@@ -98,7 +99,7 @@
                 <div class="row">
                     <div class="col-lg-7">
                         <div class="header-hero-content">
-                            <h1 class="hero-title wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s"><b><br><br>Your</b> <span>Accounting</span> and Compliance partner for <b>Growth.</b></h1>
+                            <h1 class="hero-title wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.2s"><b>Your</b> <span>Accounting</span> and Compliance partner for <b>Growth.</b></h1>
                             <p class="text wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s" style="color: rgb(255, 255, 255);">At AcctAbility, we are committed to providing you with specialized and seamless accounting solutions, that empower you to concentrate on your core strengths. With our specialized data analyses services, we can together unlock the full potential of your financial data and drive your business forward.</p>
                             <br><a href="#contact"><button class="main-btn" style="background-color: rgb(255, 255, 255);">Contact Us</button></a>
                             <!-- <div class="header-singup wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.8s">
@@ -214,22 +215,22 @@
                         <ul class="nav justify-content-center wow fadeIn" data-wow-duration="1s" data-wow-delay="0.5s" id="myTab" role="tablist">
                             <li class="nav-item">
                                 <a class="active" id="business-tab" data-toggle="tab" href="#business" role="tab" aria-controls="business" aria-selected="true">
-<i class="lni lni-pointer-left"></i> <span>Accounting  <br> Services</span>
+                                    <i class="fa-regular fa-hand-pointer fa-rotate-270"></i> <span>Accounting  <br> Services</span>
 </a>
                             </li>
                             <li class="nav-item">
                                 <a id="digital-tab" data-toggle="tab" href="#digital" role="tab" aria-controls="digital" aria-selected="false">
-<i class="lni-bullhorn"></i> <span>Data Analysis   <br>and MIS</span>
+                                    <i class="fa-solid fa-bullhorn"></i> <span>Data Analysis   <br>and MIS</span>
 </a>
                             </li>
                             <li class="nav-item">
                                 <a id="market-tab" data-toggle="tab" href="#market" role="tab" aria-controls="market" aria-selected="false">
-<i class="lni-stats-up"></i> <span>Payroll Management  <br> Services</span>
+                                    <i class="fa-solid fa-chart-line"></i> <span>Payroll Management  <br> Services</span>
 </a>
                             </li>
                             <li class="nav-item">
                                 <a id="corporate-tab" data-toggle="tab" href="#corporate" role="tab" aria-controls="market" aria-selected="false">
-<i class="lni-stats-up"></i> <span>Corporate Establishment <br>and Structuring in India</span>
+                                    <i class="fa-solid fa-chart-line"></i> <span>Corporate Establishment <br>and Structuring in India</span>
 </a>
                             </li>
                         </ul>
@@ -330,13 +331,7 @@
                                             <h3 class="services-title">Planning on establishing a Corporation in India?
                                                 <span>Look no further, just sit back and relax with our professional team handling all the
                                                     legal registrations and compliances for you! </span></h3>
-                                            <p class="text">AcctAbility provides fast and reliable services in relation to the legal incorporation of
-                                                your investment in India. This important legal process, when combined with our
-                                                professional planning, provides your business with a superior and integrated corporate
-                                                establishment process under one roof.<br>
-                                                As one of the leading Indian Brands for registering foreign-owned businesses, we are
-                                                well equipped to advise companies on the best way to structure their business entities
-                                                to meet their goals and maximize operational efficiency.</p>
+                                            <p class="text">We offer to provide you our data analysis services, where we transform your accounting data into an excel based interactive Management Reporting Dashboard, helping you identify the key trends and comparisons, in-turn resulting in better decisions making and faster business growth.</p>
                                             <div class="our-services-progress d-flex align-items-center mt-55">
                                                 <div class="circle" id="circles-4"></div>
                                                 <div class="progress-content">
@@ -662,21 +657,21 @@
                             <li></li>
                             <li></li>
                             <li></li>
+                            <li></li>
                         </ul>
-                        <p class="text">At AcctAbility, our commitment to excellence goes beyond the services we provide it's reflected in the experiences and successes of our clients. We take pride in building strong, collaborative partnerships that drive tangible results. Don't just take our word for it; hear what our clients have to say about their journey with AcctAbility.
+                        <p class="text">At AcctAbility, our commitment to excellence goes beyond the services we provide it's reflected in the experiences and successes of our clients. We take pride in building strong, collaborative partnerships that drive tangible results. Don't just take our word for it; hear what our clients have to say about their journey with AcctAbility Services.
 
-                            <br> <br>These testimonials highlight the impact of our dedicated team, innovative solutions, and unwavering commitment to client success. Discover why businesses trust AcctAbility for exceptional service and transformative outcomes.</p>
+                            <br> <br>These testimonials highlight the impact of our dedicated team, innovative solutions, and unwavering commitment to client success. Discover why businesses trust AcctAbility Services for exceptional service and transformative outcomes.</p>
                     </div>
                 </div>
                 <div class="col-lg-6">
                     <div class="testimonial-right-content mt-50 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.6s">
                         <div class="quota">
-                            <i class="lni-quotation"></i>
-                        </div>
+                            <i class="fa-solid fa-quote-right" style="color: red;"></i>              </div>
                         <div class="testimonial-content-wrapper testimonial-active">
                             <div class="single-testimonial">
                                 <div class="testimonial-text">
-                                    <p class="text">“Working with AcctAbility has been a game-changer for our business. Their team's dedication to excellence and innovative solutions have significantly boosted our productivity.""
+                                    <p class="text">“Working with AcctAbility has been a game-changer for our business. Their team's dedication to excellence and innovative solutions have significantly boosted our productivity.”
 
                                         </p>
                                 </div>
@@ -760,7 +755,9 @@
             </div>
         </div>
     </section>
-    <div id="brand" class="brand-area" style="padding-top: 0%;">
+
+
+    <div id="brand" class="brand-area">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
@@ -774,6 +771,7 @@
                         <div class="single-brand mt-50 wow fadeIn" data-wow-duration="1s" data-wow-delay="0.4s">
                             <img src="assets/images/Pulp.png" alt="brand">
                         </div>
+                       
                     </div>
                 </div>
             </div>
@@ -869,7 +867,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="single-contact-info contact-color-1 mt-30 d-flex  wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.3s">
                             <div class="contact-info-icon">
-                                <i class="lni-map-marker"></i>
+                                <i class="fa-solid fa-location-dot" style="color: #fff;"></i>
                             </div>
                             <div class="contact-info-content media-body">
                                 <p class="text">21 King Street, Melbourne <br> Victoria, 1202 Australia.</p>
@@ -879,8 +877,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="single-contact-info contact-color-2 mt-30 d-flex  wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.6s">
                             <div class="contact-info-icon">
-                                <i class="lni-envelope"></i>
-                            </div>
+                                <i class="fa-regular fa-envelope"></i>                            </div>
                             <div class="contact-info-content media-body">
                                 <p class="text"><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="fe969b929291be8b979a9b9d95d09d9193">[email&#160;protected]</a></p>
                                 <p class="text"><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="b7c4c2c7c7d8c5c3f7c2ded3d2d4dc99d4d8da">[email&#160;protected]</a></p>
@@ -890,8 +887,7 @@
                     <div class="col-lg-4 col-md-6">
                         <div class="single-contact-info contact-color-3 mt-30 d-flex  wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.9s">
                             <div class="contact-info-icon">
-                                <i class="lni-phone"></i>
-                            </div>
+                                <i class="fa-solid fa-phone"></i>                            </div>
                             <div class="contact-info-content media-body">
                                 <p class="text">+91 9111900007</p>
                                 <!-- <p class="text">+88 999 5555 444</p> -->
@@ -903,7 +899,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="contact-wrapper-form pt-115  wow fadeInUpBig" data-wow-duration="1s" data-wow-delay="0.5s">
-                        <h4 class="contact-title pb-10"><i class="lni-envelope"></i> Leave <span>A Message.</span></h4>
+                        <h4 class="contact-title pb-10"><i class="fa-solid fa-envelope" style="color: red;"></i> Leave <span>A Message.</span></h4>
                         <form id="contact-form" action="assets/contact.php" method="post">
                             <div class="row">
                                 <div class="col-md-6">
@@ -949,7 +945,7 @@
                             <!-- <p class="text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus</p> -->
                         </div>
                     </div>
-                    <p class="text" style="color: white;">Part of a 10+ years old professional consultancy firm in India, AcctAbility  is an esteemed Accounting and Compliance Outsourcing entity headquartered in Greater Noida (India), providing comprehensive services to elite CA/CPA firms, Onshore Accounting Outsourcing providers and Independent Business Entities worldwide, with a focus on quality, cost-effectiveness, and turnaround time.</p>
+                    <p class="text" style="color: white;">Part of a 10+ yeas old professional consultancy firm in India, AcctAbility  is an esteemed Accounting and Compliance Outsourcing entity headquartered in Greater Noida (India), providing comprehensive services to elite CA/CPA firms, Onshore Accounting Outsourcing providers and Independent Business Entities worldwide, with a focus on quality, cost-effectiveness, and turnaround time.</p>
 
                     <div class="col-lg-3 col-sm-6 order-sm-3 order-lg-2">
                         <div class="footer-link pt-40">
@@ -957,10 +953,10 @@
                                 <h5 class="title">Services</h5>
                             </div>
                             <ul>
-                                <li><a href="#services">Accounting Services</a></li>
-                                <li><a href="#services">Data Analysis and MIS</a></li>
-                                <li><a href="#services">Payroll Management Services</a></li>
-                                <li><a href="#services">Corporate Establishment and Structuring in India</a></li>
+                                <li><a href="#">Accounting Services</a></li>
+                                <li><a href="#">Data Analysis and MIS</a></li>
+                                <li><a href="#">Payroll Management Services</a></li>
+                                <li><a href="#">Corporate Establishment and Structuring in India</a></li>
                             </ul>
                         </div>
                     </div>
@@ -971,9 +967,9 @@
                             </div>
                             <ul>
                                 <li><a href="#">Overview</a></li>
-                                <li><a href="#service">Why us</a></li>
+                                <li><a href="#">Why us</a></li>
                                 <!-- <li><a href="#">Awards & Recognitions</a></li> -->
-                                <li><a href="#contact">Contact us</a></li>
+                                <li><a href="#">Contact us</a></li>
                             </ul>
                         </div>
                     </div>
@@ -988,10 +984,10 @@
                                 <p class="text" style="color: white;"><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="c1b2b4b1b1aeb3b581b4a8a5a4a2aaefa2aeac">[email&#160;protected]</a></p>
                                 <p class="text" style="color: white;">+91 9111900007</p>
                                 <ul class="social mt-40">
-                                    <li><a href="#"><i class="lni-facebook"></i></a></li>
-                                    <li><a href="#"><i class="lni lni-twitter-original"></i></a></li>
-                                    <li><a href="#"><i class="lni-instagram"></i></a></li>
-                                    <li><a href="#"><i class="lni-linkedin"></i></a></li>
+                                    <li><a href="#"><i class="fa-brands fa-facebook-f"></i></a></li>
+                                    <li><a href="#"><i class="fa-brands fa-twitter"></i></a></li>
+                                    <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+                                    <li><a href="#"><i class="fa-brands fa-linkedin"></i></a></li>
                                 </ul>
                             </div>
                         </div>
@@ -1005,7 +1001,7 @@
     </footer>
 
 
-    <a href="#" class="back-to-top"><i class="lni-chevron-up"></i></a>
+    <a href="#" class="back-to-top"><i class="fa-solid fa-chevron-up"></i></a>
 
 
 
